Completed All Challenges

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -39,7 +39,7 @@
 
                 <label>
                     Date harvested
-                    <input type="date" name="date_planted">
+                    <input type="date" name="date_harvested">
                 </label>
 
                 <input type="submit" class="submit" value="Harvest!">
